# mini-rat

./: .gitignore  README.md  configure.ac
client/: Makefile.am  configure.ac
client/include/: util.h
client/src/: mini-rat.c
common/include/: util.h
common/src/: util.c
doc/: coding-style.md
server/: Makefile.am  configure.ac
server/include/: list.h  logging.h  mini-rat.h  server.h  session.h  util.h
server/src/: logging.c  mini-rat.c  server.c  session.c  util.c
